2005-01-11  Andreas Kupries <andreask@activestate.com>

	* htmlparse.tcl: Modified to load only the data structure we need,
	  stacks, and not all eleven. This fixes the Tcllib SF Bug
	  1087173, reported by Don Porter <dgp@users.sourceforge.net>.

	* htmlparse.test: Ensured usage of local packages, nothing
	  installed, and updated for the new struct usage. Updated to
	  fixes in cmdline.

2004-10-05  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.7 ========================
	* 

2004-10-04  Andreas Kupries <andreask@activestate.com>

	* htmlparse.tcl (::htmlparse::PrepareHtml): Refixed the [Tcllib SF
	* htmlparse.test: Bug 861277]. This came back because of the
	  changes to entity processing for [Tcllib SF Bug 1018574]. We are
	  now using standard numeric entities to protect these special
	  characters, instead of nonstandard entities. Extended the test
	  suite to cover this. Thanks to Joe English for the catch.

2004-10-04  Joe English  <jenglish@users.sourceforge.net>

	* htmlparse.tcl(DoDecMap): Make sure numeric character references 
	  are interpreted as decimal (Bug #1039961).
	* htmlparse.test: Added test case.

2004-09-29  Andreas Kupries <andreask@activestate.com>

	* htmlparse.test: Fixed [Tcllib SF Bug 1034580], see also
 	* htmlparse.tcl:  [Tcllib SF Bug 900041]. Thanks to Georgios
 	  Petasis <petasis@users.sourceforge.net> for the report and
 	  proposed solution. While the solution was not used as-is, it
 	  gave enough clues to make writing the actual solution
 	  trivial. It converts <tag attr /> to <tag attr></tag>. Added
 	  testcases.

2004-09-21  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* htmlparse.tcl (PrepareHtml): Fixed processing of comments
	  [Tcllib SF Bug 861287]. A legal end of comment is allowed to
	  have whitespace between '--' and '>'. Also recognize <-- as
	  bogus start of a comment (Should be <!-- to be legal). Convert