@@ -1,3 +1,11 @@
+2005-10-06  Andreas Kupries <andreask@activestate.com>
+
+	* htmlparse.test: Reworked to use all available implementations of
+	  struct::tree. Moved all tests using it into a separate file.
+
+	* htmlparse.tree_testsuite: New file. Now contains all the tests
+	  using struct::tree.
+
 2005-01-11  Andreas Kupries <andreask@activestate.com>
 
 	* htmlparse.tcl: Modified to load only the data structure we need,
